--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1449,3 +1449,20 @@ section.mainWrapper
 .rightSection .guru-gold-silver .connect-link li select option {
   color: #131f2c;
 }
+.rightSection .guru-gold-silver .silver-coin-box .userPro {
+  position: relative;
+}
+.rightSection .guru-gold-silver .silver-coin-box .userPro figure {
+  overflow: hidden;
+}
+.rightSection .guru-gold-silver .silver-coin-box .userPro .profileImageTag {
+  position: absolute;
+  left: 58px;
+  bottom: -12px;
+  width: auto;
+}
+.rightSection .guru-gold-silver .silver-coin-box .userPro figure img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
