--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -434,6 +434,58 @@ line-height: 1.3;
   background: #26353d;
   padding-right: 20px;
 }
+.pagination {
+	text-align: center;
+	padding: 26px 0px 56px;
+  color: white;
+  font-size: 30px;
+}
+.pagination button {
+	display: inline-block;
+	font-size: 16px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	border: solid 1px #d9d9d9;
+	border-radius: 5px;
+	padding: 0px 20px;
+	margin: 0px 3px;
+	cursor: pointer;
+}
+.pagination button.selected:hover {
+	background-color:rgba(198, 208, 225, 0.1);
+  color: white;
+}
+
+.pagination button:hover {
+	background-color:rgba(198, 208, 225, 0.1);
+	color: #fff;
+}
+.pagination button.active {
+  background: rgba(198, 208, 225, 0.1);
+  color: white;
+	border-color: #19a0dd;
+}
+.pagination input{
+    width: 8%;
+    border: 1px solid rgba(229, 241, 249, 0.53);
+    border-radius: 8px;
+    padding: 14px;
+    box-shadow: 0 4px 14px 0 rgba(60, 71, 101, 0.13);
+    margin-bottom: 18px;
+    margin-right: 18px;
+    font-size: 14px;
+    line-height: 1.5em;
+    color: black;
+    font-family: PlusJakartaSansMedium;
+    font-weight: 500;
+    outline: 0;
+    text-align: center;
+}
+.pagination div{
+  margin: 15px;
+}
+
 
 @media (max-width: 1080px) {
   .rightSection .setting-wrapper .setting-container {
