--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1,5 +1,51 @@
 /* new css */
 
+.card {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* background-color: #ffffff; */
+  margin: 0 20px;
+  width: 280px;
+  height: 350px;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.2);
+}
+
+.card .percent {
+  position: relative;
+}
+
+.card svg {
+  position: relative;
+  width: 210px;
+  height: 210px;
+  transform: rotate(-90deg);
+}
+
+.card svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #f0f0f0;
+  stroke-width: 10;
+  stroke-linecap: round;
+}
+
+.card svg circle:last-of-type {
+  stroke-dasharray: 625px;
+  stroke-dashoffset: calc(625px - (625px * var(--percent)) / 100);
+  stroke: #3498db; 
+}
+
+.card:nth-child(1) svg circle:last-of-type {
+  stroke: linear-gradient(to right, #8E44AD, #3498DB);
+}
+
+.card:nth-child(2) svg circle:last-of-type {
+  stroke: #2ecc71;
+}
 /* Alert Popup css */
 .custom-toast {
   background-color: #3498db;
