--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -442,12 +442,24 @@ line-height: 1.3;
 }
 .pagination button {
 	display: inline-block;
-	font-size: 16px;
+	font-size: 18px;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
 	border: solid 1px #d9d9d9;
-	border-radius: 5px;
+	border-radius: 50%;
+	padding: 0px 20px;
+	margin: 0px 3px;
+	cursor: pointer;
+}
+.pagination button:last-child {
+	display: inline-block;
+	font-size: 18px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	border: solid 1px #d9d9d9;
+	border-radius: 45px;
 	padding: 0px 20px;
 	margin: 0px 3px;
 	cursor: pointer;
@@ -469,7 +481,7 @@ line-height: 1.3;
 .pagination input{
     width: 8%;
     border: 1px solid rgba(229, 241, 249, 0.53);
-    border-radius: 8px;
+    border-radius: 18px;
     padding: 14px;
     box-shadow: 0 4px 14px 0 rgba(60, 71, 101, 0.13);
     margin-bottom: 18px;
@@ -482,7 +494,7 @@ line-height: 1.3;
     outline: 0;
     text-align: center;
 }
-.pagination div{
+.pagination form{
   margin: 15px;
 }
 
