work on mob responsive in sidebar

--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1315,6 +1315,9 @@ section.mainWrapper.flex.hideMob {
   .mobileMenus {
     display: block;
   }
+  .edit-profile {
+    width: 100% !important;
+}
 }
 
 .video-slider .layer h5 {
