--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -5643,8 +5643,9 @@ padding-right: 40px;
 }
 
 .video-wrapper .video-box {
-width: calc(100% - 345px);
-padding-right: 32px;
+  width: calc(100% - 345px);
+  padding-right: 32px;
+  height: 100%;
 }
 
 @media (max-width: 1080px) {
@@ -5756,6 +5757,9 @@ display: inline-block;
 margin-left: 5px;
 }
 
+.reply{
+  margin-left: 30px !important;
+}
 .video-wrapper .video-box .review ul li a span img {
 width: 30px;
 display: inline-block;
