badges,progressbar 3days code

--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1,5 +1,7 @@
 /* new css */
-
+.CircularProgressbar .CircularProgressbar-path {
+  stroke: url(#idCSS);
+}
 .card {
   display: flex;
   align-items: center;
@@ -510,7 +512,7 @@ small.pc {
   color: #fff;
   margin: 0px 3px;
   background: rgba(198, 208, 225, 0.1);
-} 
+}
 
 .pagination button:last-child {
   display: inline-block;
@@ -531,14 +533,20 @@ small.pc {
 }
 
 .pagination button:hover {
-	background-color:#be41c0;
-	color: #fff;
+  background-color: #be41c0;
+  color: #fff;
 }
 .pagination button.active {
   color: white;
   border-color: #b03fcc;
-  background: linear-gradient( 87.97deg, #b03fcc 2.88%, #683fe4 25.56%, rgba(216, 63, 190, 0.94) 114.56% ), linear-gradient(0deg, rgba(255, 255, 255, 0.21), rgba(255, 255, 255, 0.21));
-} 
+  background: linear-gradient(
+      87.97deg,
+      #b03fcc 2.88%,
+      #683fe4 25.56%,
+      rgba(216, 63, 190, 0.94) 114.56%
+    ),
+    linear-gradient(0deg, rgba(255, 255, 255, 0.21), rgba(255, 255, 255, 0.21));
+}
 .pagination input {
   width: 8%;
   border: 1px solid rgba(229, 241, 249, 0.53);
@@ -557,11 +565,12 @@ small.pc {
   border-color: #b03fcc;
   background: rgba(198, 208, 225, 0.1);
   color: #fff;
-} 
-.pagination input::-webkit-outer-spin-button, .pagination input::-webkit-inner-spin-button {
+}
+.pagination input::-webkit-outer-spin-button,
+.pagination input::-webkit-inner-spin-button {
   -webkit-appearance: none !important;
-} 
-.pagination input[type=number] {
+}
+.pagination input[type="number"] {
   -moz-appearance: textfield;
 }
 .pagination form {
@@ -764,11 +773,11 @@ small.pc {
     height: 30px;
     line-height: 30px;
     padding: 0px 15px;
-}
-.pagination button:hover {
-  background: #be41c0;
- } 
-.pagination input {
+  }
+  .pagination button:hover {
+    background: #be41c0;
+  }
+  .pagination input {
     width: 20%;
     border-radius: 18px;
     padding: 4px;
@@ -1054,7 +1063,7 @@ header .userIcon img {
   }
   .edit-profile {
     width: 100%;
-} 
+  }
   .mobileVideoSection .author-tag .col_right {
     margin-top: 0;
     align-self: flex-end;
